--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "kreait/firebase-php": "^4.0"
+        "kreait/firebase-php": "^4.0",
+        "beyonic/beyonic-php": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
